# fdvib

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
docs/: _config.yml  index.md  theory.md
docs/_includes/: head-custom.html
examples/: README.md
examples/gas/: fdvib.in  thermo.in
examples/local/: fdvib.in  thermo.in
src/: analysis.cpp  common.cpp  elements.cpp  fakeg.cpp  fdvib.hpp  init.cpp  main.cpp  mode_selection.cpp  molden.cpp  prepare_run.cpp  process.cpp  qe_input.cpp  qe_io.cpp  qe_output.cpp  qe_vibration.cpp  results.cpp  run_state.cpp  shm.cpp  thermo.cpp
tests/: fakeg_export.sh  gas_rrho_modes.sh  molden_export.sh  prepare_workflow.sh  qe_units.sh  shm_export.sh
